istio/test/istio/httpbin-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: httpbin-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: server-python
spec:
  hosts:
    - "*"
  gateways:
    - httpbin-gateway
  http:
    - match:
      route:
        - destination:
            host: service-python
            port:
              number: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: server-js
spec:
  hosts:
    - "*"
  gateways:
    - httpbin-gateway
  http:
    - match:
      route:
        - destination:
            host: service-js
            port:
              number: 80
