istio/test/istio/route-rule-all-v1.yml
# 流量全部路由到v1版本
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: service-js
spec:
  hosts:
    - service-js  
  http:
    - route:
        - destination:
            host: service-js
            subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: service-python
spec:
  hosts:
    - service-python  
  http:
    - route:
        - destination:
            host: service-python
            subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: service-lua
spec:
  hosts:
    - service-lua
  http:
    - route:
        - destination:
            host: service-lua
            subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: service-node
spec:
  hosts:
    - service-node
  http:
    - route:
        - destination:
            host: service-node
            subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: service-go
spec:
  hosts:
    - service-go
  http:
    - route:
        - destination:
            host: service-go
            subset: v1
