istio/test/istio/route-rule-go-80-20.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: service-go
spec:
  hosts:
    - service-go
  http:
    - route:
        - destination:
            host: service-go
            subset: v1
          weight: 80
        - destination:
            host: service-go
            subset: v2
          weight: 20
