istio/test/istio/route-rule-go-delay.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: service-go
spec:
  hosts:
    - service-go
  http:
    - match:
      fault:
        delay:
          percent: 50
          fixedDelay: 7s
      route:
        - destination:
            host: service-go
            subset: v2
    - route:
        - destination:
            host: service-go
            subset: v1
