istio/test/istio/route-rule-go-v1-v2.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: service-go-v1-v2
spec:
  hosts:
    - service-go
  http:
    - route:
        - destination:
            host: service-go
            subset: v1
          weight: 50
        - destination:
            host: service-go
            subset: v2
          weight: 50
