istio/test/istio/route-rule-js-by-agent.yml
# 根据请求头配置路由
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: service-go
spec:
  hosts:
    - service-go
  http:
    - match:
        - headers:
            user-agent:
              regex: ".*?(Chrome).*?"
      route:
        - destination:
            host: service-go
            subset: v1
    - route:
        - destination:
            host: service-go
            subset: v2
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: service-python
spec:
  hosts:
    - service-python
  http:
    - match:
        - headers:
            user-agent:
              regex: ".*?(safari).*?"
      route:
        - destination:
            host: service-python
            subset: v2
    - route:
        - destination:
            host: service-python
            subset: v1
